<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.paylot.android.StatusActivity">

    <LinearLayout
        android:id="@+id/payLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/header_bg"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/merchant_logo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@color/white"
                android:padding="3dp"
                android:src="@drawable/demo_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/merchant_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.85"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/default_merchant_name"
                    android:textColor="@color/lightGrey"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tx_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/default_tx_rate"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/status_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/payment_success"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/status_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="16dp"
                app:srcCompat="@drawable/ic_success" />

            <TextView
                android:id="@+id/status_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:text="Your payment of 100 ETH has been received successfully"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/error_btn_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:visibility="gone">

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:onClick="retry"
                android:text="@string/retry"/>

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="wait"
                android:text="@string/wait"
                android:textColor="@color/black"/>
        </LinearLayout>

        <TextView
            android:id="@+id/timer_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/outline_bg_primary"
            android:gravity="center"
            android:padding="16dp"
            android:text="Closing in 5s"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:text="@string/brand_text"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>


