<?xml version="1.0" encoding="utf-8"?>


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/payLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="co.paylot.android.AddressActivity">

            <LinearLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/header_bg"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/merchant_logo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@color/white"
                    android:padding="3dp"
                    android:src="@drawable/demo_logo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/merchant_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.85"
                        android:paddingEnd="8dp"
                        android:paddingStart="8dp"
                        android:text="@string/default_merchant_name"
                        android:textColor="@color/lightGrey"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tx_rate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:paddingEnd="8dp"
                        android:paddingStart="8dp"
                        android:text="@string/default_tx_rate"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/timer_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:paddingBottom="5dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="5dp"
                android:text="@string/default_timer"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:layout_marginRight="3dp"
                    android:text="@string/amount_due"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/amount_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginStart="3dp"
                    android:focusable="true"
                    android:text="@string/default_conversion"
                    android:textColor="@color/black"
                    android:textIsSelectable="true"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageView
                android:id="@+id/qr_view"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:focusable="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:text="@string/qr_desc"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="Payment Address"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/address_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/outline_bg_primary"
                android:focusable="true"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:text="1F9DLzJjoAUaRdNiuCzvw4WZJEtKkijgm"
                android:textColor="@color/black"
                android:textIsSelectable="true" />

            <Button
                android:id="@+id/open_wallet_view"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/green"
                android:onClick="openInWallet"
                android:text="Open in Wallet App" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:background="@color/lightGrey"
                android:drawableLeft="@drawable/ic_back"
                android:drawableStart="@drawable/ic_back"
                android:onClick="changeCurrency"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="Change Currency"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:text="@string/brand_text"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
</FrameLayout>


